--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
@@ -18,7 +17,6 @@
         <div class="upload-section" id="uploadSection">
             <div class="upload-icon"><i class="bi bi-cloud-upload-fill"></i></div>
             <input type="file" id="uploadExcel" class="form-control mb-3" accept=".xlsx, .xls">
-
             <div class="row mb-3">
                 <div class="col-md-6">
                     <input type="number" id="month" class="form-control" placeholder="Month (1-12)" value="7" min="1"
@@ -28,11 +26,10 @@
                     <input type="number" id="year" class="form-control" placeholder="Year" value="2025" min="2000">
                 </div>
             </div>
-
             <button id="showDataBtn" class="btn btn-upload btn-custom">
                 <i class="fas fa-upload"></i> Upload & Show
             </button>
-            <p class="text-muted mt-3">Upload attendance Excel & filter leave...</p>
+            <p class="text-muted mt-3">Upload attendance Excel & extract all leave records...</p>
         </div>
 
         <div id="tableBox" class="d-none">
@@ -53,6 +50,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
 </body>
 
