--- a/index.html
+++ b/index.html
@@ -2,32 +2,57 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Excel-Based Attendance Leave Extractor</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@600&family=Roboto:wght@400;500&display=swap"
+        rel="stylesheet">
+    <link rel="icon" type="image/png" href="img/favicon.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container py-5">
-        <h2 class="text-center mb-4">Excel-Based Attendance Leave Extractor</h2>
+        <div class="d-flex justify-content-between align-items-center flex-wrap mb-4">
+            <div class="text-center flex-grow-1">
+                <h1 class="main-heading mb-1" style="font-family: 'EB Garamond'; font-size: 2.4rem; color: #2b4bd0;">
+                    RUSAN <span style="font-size: 2rem; color: #288683;">Corporate HR Payroll</span>
+                </h1>
+                <h2 class="sub-heading mb-0">Excel-Based Attendance Leave Extractor</h2>
+            </div>
+            <div class="ms-3">
+                <img src="img/ru.jpg" alt="Logo" style="height: 60px;" />
+            </div>
+        </div>
 
         <div class="upload-section" id="uploadSection">
             <div class="upload-icon"><i class="bi bi-cloud-upload-fill"></i></div>
-            <input type="file" id="uploadExcel" class="form-control mb-3" accept=".xlsx, .xls">
-            <div class="row mb-3">
-                <div class="col-md-6">
-                    <input type="number" id="month" class="form-control" placeholder="Month (1-12)" value="7" min="1"
-                        max="12">
-                </div>
-                <div class="col-md-6">
-                    <input type="number" id="year" class="form-control" placeholder="Year" value="2025" min="2000">
+            <input type="file" id="uploadExcel" class="form-control mb-3" accept=".xlsx, .xls" />
+
+            <div class="mb-3 text-start">
+                <label class="form-label fw-semibold mb-2"></label>
+                <div class="row g-3">
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <span class="input-group-text fw-semibold text-muted">Month</span>
+                            <input type="number" id="month" class="form-control" min="1" max="12"
+                                placeholder="Enter month (1-12)">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="input-group">
+                            <span class="input-group-text fw-semibold text-muted">Year</span>
+                            <input type="number" id="year" class="form-control" min="2000" placeholder="Enter year">
+                        </div>
+                    </div>
                 </div>
             </div>
+
             <button id="showDataBtn" class="btn btn-upload btn-custom">
-                <i class="fas fa-upload"></i> Upload & Show
+                <i class="fas fa-upload"></i> Upload File
             </button>
             <p class="text-muted mt-3">Upload attendance Excel & extract all leave records...</p>
         </div>
@@ -48,6 +73,17 @@
             </div>
         </div>
     </div>
+    <footer class="text-center text-muted py-3 mt-0 border-top"
+        style="background-color: #ffebd0; font-family: 'EB garamond';">
+        <div class="container">
+            <p class="mb-1">
+                &copy; <span>2025</span> RUSAN Corporate HR Payroll. All rights reserved.
+            </p>
+            <small>Designed & Developed by Rusan HR IT Team</small>
+        </div>
+    </footer>
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
