--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h2 class="sub-heading mb-0">Excel-Based Attendance Leave Extractor</h2>
             </div>
             <div class="ms-3">
-                <img src="img/ru.jpg" alt="Logo" style="height: 60px;" />
+                <img src="img/ru.png" alt="Logo" style="height: 60px;" />
             </div>
         </div>
 
